# flarbor

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
environments/code-change-agent/: package.json  tsconfig.json  wrangler.jsonc
environments/code-change-agent-harbor/: README.md  pyproject.toml  run.sh
environments/code-change-agent-harbor/src/code_change_agent/: agent.py
environments/code-change-agent-harbor/task/: instruction.md  task.toml
environments/code-change-agent-harbor/task/environment/: Dockerfile
environments/code-change-agent-harbor/task/tests/: test.sh
environments/code-change-agent/src/: index.ts
environments/code-change/flarbor/: Dockerfile  package.json  wrangler.jsonc
environments/code-change/flarbor/src/: index.ts  tasks.ts  (+1 more)
environments/code-change/harbor/: README.md  pyproject.toml  run.sh
environments/code-change/harbor/src/code_change_agent/: __init__.py  agent.py  tasks.py
environments/code-change/harbor/task/: instruction.md  task.toml
environments/code-change/harbor/task/environment/: Dockerfile
environments/code-change/harbor/task/tests/: test.sh
environments/repo-audit/flarbor/: .dev.vars.example  README.md  package.json  wrangler.jsonc
environments/repo-audit/harbor/: .env.example  README.md  pyproject.toml  run.sh
environments/repo-audit/harbor/src/repo_audit_agent/: __init__.py  agent.py
environments/repo-audit/harbor/task/: instruction.md  task.toml
environments/repo-audit/harbor/task/environment/: Dockerfile
environments/repo-audit/harbor/task/tests/: test.sh
(+2 files in other folders)
