[project]
name = "code-change-harbor"
version = "0.0.1"
description = "Harbor equivalent of Flarbor's code-change environment"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.4.0",
    "litellm>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src/code_change_agent"]
